# write-to-file

./: .rustfmt.toml  Cargo.toml  README.md
src/: function.rs  lib.rs  traits.rs
tests/: function.rs  traits.rs
